# MAI_MathPrac

./: CMakeLists.txt  README.md
lab1/: README.md  task01.c  task02.c  task03.c  task04.c  task05.c  task06.c  task07.c  task08.c  task09.c  task1.c  task10.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c
lab2/: t6_test  task01.c  task02.c  task03.c  task04.c  task05.c  task06.c  task06f.c  task06s.c  task07.c  task08.c  task09.c  task10.c
lab3/: t03_input  t03_output  t05_input  t08_input  t10_input  task01.c  task02.c  task03.c  task04.c  task05.c  task08.c  task10.c
lab4/: CMakeLists.txt  t05_input  t06_input  t07_input  task05.c  task06.c  task07.c
lab4/t05_tests/: test1  test3  test3_err
lab4/task01/: hash_table.c  hash_table.h  input  makefile  task01.c  utility.c  utility.h
lab4/task03/: input  makefile  polynomial.c  polynomial.h  task03.c  trie.c  trie.h  utility.c  utility.h
lab4/task04/: boolean_vector.c  boolean_vector.h  input  makefile  output  task04.c  utility.c
lab4/task09/: binomial_heap.c  binomial_heap.h  config  config_generator.c  department.c  department.h  input  input_generator.c  input_reader.c  input_reader.h  log  logger.c  logger.h  makefile  pq_test.c  priority_queue.c  priority_queue.h  readers.c  readers.h  request_1  task09.c  utility.c  utility.h
lab4/task09/map/: binary_search_tree.c  binary_search_tree.h  dynamic_array.c  dynamic_array.h  hash_set.c  map.c  map.h  map_test.c  trie.c  trie.h
lab4/task09/priority_queue/: binary_heap.c  binary_heap.h  binomial_heap.c  binomial_heap.h  cartesian_tree.c  cartesian_tree.h  fibonacci_heap.c  fibonacci_heap.h  leftist_heap.c  leftist_heap.h  pq_test.c  priority_queue.c  priority_queue.h  skew_heap.c  skew_heap.h
lab4/task10/: CMakeLists.txt  config  input  main.c
lab4/task10/debugger/: CMakeLists.txt
lab4/task10/debugger/include/: debugger.h
lab4/task10/debugger/src/: debugger.c
lab4/task10/instruction_executor/: CMakeLists.txt
lab4/task10/instruction_executor/include/: instruction_executor.h  int_stack.h  operand_stack.h  operator_stack.h
lab4/task10/instruction_executor/src/: instruction_executor.c  int_stack.c  operand_stack.c  operator_stack.c
lab4/task10/readers/: CMakeLists.txt
lab4/task10/readers/include/: readers.h
lab4/task10/readers/src/: readers.c
lab4/task10/trie/: CMakeLists.txt
lab4/task10/trie/include/: trie.h
lab4/task10/trie/src/: trie.c
lab4/task10/utility/: CMakeLists.txt
lab4/task10/utility/include/: utility.h
lab4/task10/utility/src/: utility.c
